fix header logo on mobile

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -185,7 +185,7 @@ circle {
     .limelogo {
         width: 3rem;
         height: 3rem;
-        top: 0.5rem;
+        top: 1rem;
         left: 0.5rem;
     }
 
